fix: fetch issue on PROD env

--- a/src/components/search/SearchTable.astro
+++ b/src/components/search/SearchTable.astro
@@ -20,7 +20,7 @@ type Props = SearchParamsProps & { page: string };
 
 const props = Astro.props;
 
-const { data, totalResult } = import.meta.env.DEV
+const { data, totalResult } = import.meta.env.PROD
   ? await (searchMock as unknown as Promise<SearchProps>)
   : await getSearchResults({
       keyword: props.query,
