--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -32,6 +32,8 @@ if (!page || !id) {
       name="keywords"
       content="maktabah yarsi, buku islam, perpustakaan islam, pencarian buku"
     />
+    <meta http-equiv="Cache-control" content="no-cache, no-store" />
+    <meta http-equiv="Pragma" content="no-cache" />
   </Fragment>
   <aside>
     <form
