--- a/src/components/search/SearchTableAsync.astro
+++ b/src/components/search/SearchTableAsync.astro
@@ -1,5 +1,5 @@
 ---
-import configServer from "~/lib/config.server";
+import configServer from "~/lib/config.client";
 import { getSearchResults } from "~/lib/search.server";
 import { strategy, wait } from "~/lib/utils/helper";
 
