--- a/src/pages/bibliographies/[id]/[page].astro
+++ b/src/pages/bibliographies/[id]/[page].astro
@@ -14,7 +14,6 @@ import Separator from "~/components/Separator.astro";
 import Layout from "~/layouts/Layout.astro";
 import { getDetailBibliography } from "~/lib/bibliographies.server";
 import { formateDate, reverseSlugCaseToOriginal } from "~/lib/utils/helper";
-import Time from "~/lib/utils/time";
 
 import type { BibliographyProps } from "~/lib/utils/index.type";
 
@@ -31,8 +30,6 @@ try {
 } catch (_) {
   return Astro.redirect("/404");
 }
-
-Astro.locals.cache(Time.minutes(1));
 
 // TODO: fix this imageMeta Url
 const titleMeta = `${bibliography.title} - ${reverseSlugCaseToOriginal(bibliography.subject)}`;
@@ -73,7 +70,7 @@ const imageMeta =
   <aside
     class="fixed flex h-screen w-3/12 flex-col gap-3 overflow-y-scroll border-r border-black/10 pb-28 pl-8 pr-5 pt-5 dark:border-gray-800"
   >
-    <TableOfContentAsync id={id!} page={page!} server:defer>
+    <TableOfContentAsync id={id!} page={page!}>
       <p slot="fallback">Sedang memuat daftar isi...</p>
     </TableOfContentAsync>
   </aside>
@@ -125,7 +122,7 @@ const imageMeta =
       lastPage={bibliography.lastPage}
     />
     <Separator class="m-0 h-px p-0" />
-    <MainContentAsync id={id!} page={page!} server:defer>
+    <MainContentAsync id={id!} page={page!}>
       <p slot="fallback" class="min-h-screen">Sedang memuat konten buku...</p>
     </MainContentAsync>
     <Separator class="m-0 h-px p-0" />
